--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,7 +20,7 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
     buildFeatures {
-        buildConfig true
+        buildConfig = true
     }
 
     defaultConfig {
